# artifacts/api-server/src/routes/index.ts
@@ -1,6 +1,7 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import postersRouter from "./posters";
+import posterSizesRouter from "./posterSizes";
 import cartRouter from "./cart";
 import favoritesRouter from "./favorites";
 import ordersRouter from "./orders";
@@ -12,6 +13,7 @@ const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(postersRouter);
+router.use(posterSizesRouter);
 router.use(cartRouter);
 router.use(favoritesRouter);
 router.use(ordersRouter);
